Da tao file HTML Services

--- a/public/styles/gelato.css
+++ b/public/styles/gelato.css
@@ -202,7 +202,7 @@ body {
 }
 
 #where-to-taste {
-    font-size: 140px; font-family: 'Masterplan'; margin-left: 7vw; color: #6d3109;
+    font-size: 140px; font-family: 'Masterplan'; margin-left: 7vw; color: #ad2f16;
 }
 
 @media screen and (max-width:1150px) {
