--- a/public/styles/burger-pizza.css
+++ b/public/styles/burger-pizza.css
@@ -101,8 +101,9 @@ body {
     width: 90%;
     white-space: pre-wrap;
     overflow: auto;
-    height: 50px;
     text-overflow: ellipsis;
+    height: 50px;
+
 }
 .product-card-description {
     float: left;
@@ -111,6 +112,7 @@ body {
     margin-left: 20px;
     font-size: 20px;
     color: #969696;
+    margin-bottom: 20px;
 }
 
 .product-card-price {
@@ -120,6 +122,7 @@ body {
     font-size: 35px;
     color: #9b2929;
     margin-bottom: 20px;
+    display: none;
 }
 
 .meat {
