--- a/public/styles/gelato.css
+++ b/public/styles/gelato.css
@@ -184,7 +184,6 @@ body {
 }
 
 .hover-display:hover img {
-    margin-left: 10%;
     display: inline;
 }
 
@@ -203,6 +202,37 @@ body {
 
 #where-to-taste {
     font-size: 140px; font-family: 'Masterplan'; margin-left: 7vw; color: #ad2f16;
+}
+
+.call-button {
+    text-align: center;
+    margin-top: 40px;
+    font-size: 40px;
+    font-family: 'Masterplan';
+    background-color: #af2d2d;
+    display: block;
+    width: 60%;
+    height: 60px;
+    margin-left: 20%;
+    border-radius: 50px;
+    padding-top: 10px;
+}
+
+.call-button a{
+    color:white; 
+    text-decoration: none;
+}
+
+.call-button:hover {
+    border-style: solid;
+    border-color: #af2d2d;
+    background-color: transparent;
+    transition: 0.2s;
+    padding-top: 6px;
+}
+
+.call-button:hover a {
+    color: #af2d2d;
 }
 
 @media screen and (max-width:1150px) {
@@ -268,5 +298,11 @@ body {
     }
     #where-to-taste {
         font-size: 90px;
+    }
+    .call-button {
+        margin-top: 20px;
+        width: 80%;
+        height: 60px;
+        margin-left: 10%;
     }
 }
