--- a/public/styles/homepage.css
+++ b/public/styles/homepage.css
@@ -23,11 +23,11 @@
 }
 
 body {
-    display: flexbox;
+    display: inline;
 }
 
 .cover {
-    background-image: url("../images/BurgerCover.png");
+    background-image: url("../images/HomepageCover.png");
     background-size: contain;
     background-repeat: no-repeat;
     width: 100vw;
@@ -71,9 +71,13 @@ body {
     width: 100%;
     margin-top: 50px;
     justify-content: center;
+    background-image: url("../images/Shape1.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .product-card {
+    height: 800px;
     width: 24%;
     margin-top: 20px;
     transition: all 0.5s ease;
@@ -126,10 +130,42 @@ body {
     margin-left: 20px;
 }
 
+.call-button {
+    text-align: center;
+    margin-top: 40px;
+    font-size: 40px;
+    font-family: 'Masterplan';
+    background-color: transparent;
+    border-style: solid;
+    border-color: #ffffff;
+    display: block;
+    width: 70%;
+    margin-left: 15%;
+    height: 60px;
+    border-radius: 50px;
+    padding-top: 6px;
+}
+
+.call-button a{
+    color: #ffffff; 
+    text-decoration: none;
+}
+
+.call-button:hover {
+    background-color: #ffffff;
+    transition: 0.2s;
+    padding-top: 6px;
+}
+
+.call-button:hover a {
+    color: #af2d2d;
+}
+
 .blank-space-resize {
     width: 100%; 
     height: 100px;
 }
+
 
 /* Slider */
 
@@ -140,6 +176,14 @@ body {
     width: 86%; 
     height: 700px;
     overflow: hidden;
+  }
+  .covers{
+    display: block; 
+    border-radius: 30px; 
+    width: 86%; 
+    height: 700px; 
+    margin-left: 7%; 
+    margin-top: 50px;
   }
   .middle{
     margin-top: 340px;
@@ -180,9 +224,12 @@ body {
   .slide{
     width: 20%;
     transition: 0.6s;
+    display: flex;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   .slide img{
-    width: 100%;
     height: 100%;
   }
   
@@ -203,6 +250,26 @@ body {
   }
 
 @media screen and (max-width:1150px) {
+    .products-cards {
+        height: 450px;
+    }
+    .covers{
+        height: 400px;
+        width: 90%;
+        margin-left: 5%;
+        margin-top: 20px;
+    }
+    .slidershow {
+        background-color: black;
+        display: block;
+        border-radius: 30px;
+        width: 90%;
+        height: 400px;
+        overflow: hidden;
+    }
+    .middle {
+        margin-top: 200px;
+    }
     .meat {
         background-size: contain;
     }
