--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -20,8 +20,8 @@ nav {
 }
 .main-nav li {
     margin-top: 14px;
+    margin-right: 6%;
     list-style: none;
-    margin-right: 70px;
 	display: flex;
 }
 .main-nav li:hover {
@@ -42,8 +42,7 @@ nav {
 #burger-nav {
     margin-left: 91%; 
     width: 70px; 
-    margin-top: 2vh; 
-    margin-right: 60px; 
+    margin-top: 2vh;
     position: fixed; 
     display: none;
 }
