--- a/public/styles/services.css
+++ b/public/styles/services.css
@@ -91,6 +91,28 @@ body {
     font-size: 35px;
     text-align: center;
 }
+
+
+.product-card-gelato {
+    width: 40%;
+    margin-top: 40px;
+    margin-right: 25px;
+    margin-left: 25px;
+    transition: all 0.5s ease;
+    display: block;
+}
+
+.product-card-gelato img{
+    width: 100%;
+}
+
+.product-card-gelato ul {
+    align-self: center;
+    font-family: 'Masterplan';
+    font-size: 35px;
+    text-align: center;
+}
+
 .find-on {
     text-align: center; 
     margin-top: 70px; 
@@ -102,7 +124,7 @@ body {
 }
 
 .channel-card {
-    width: 14%;
+    width: 10%;
     margin-top: 30px;
     margin-left: 2.5%;
     margin-right: 2.5%;
@@ -127,113 +149,43 @@ body {
     margin-bottom: 30px;
     width: 70%;
     justify-items: center;
+    border-radius: 10px;
 }
 
-.fresh-gelato {
-    background-image: url("../images/FRESH\ AND\ YUMMY.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-    font-family: 'UVNSachVo';
-    font-size: 30px;
-    color: white;
+.call-button {
+    text-align: center;
+    margin-top: 40px;
+    font-size: 40px;
+    font-family: 'Masterplan';
+    background-color: #af2d2d;
+    display: block;
+    width: 20%;
+    height: 60px;
+    border-radius: 50px;
+    padding-top: 10px;
 }
 
-#fresh-gelato {
-    padding-left: 130px;
+.call-button a{
+    color:white; 
+    text-decoration: none;
 }
 
-.quality-card {
-    display: flex;
-    margin-bottom: 20px;
+.call-button:hover {
+    border-style: solid;
+    border-color: #af2d2d;
+    background-color: transparent;
+    transition: 0.2s;
+    padding-top: 6px;
 }
 
-.icon-quality {
-    width: 100px;
-    height: 100px;
-}
-
-.icon-quality-text {
-    margin-top: 25px;
-    margin-left: 20px;
+.call-button:hover a {
+    color: #af2d2d;
 }
 
 .blank-space-resize {
     width: 100%; 
     height: 100px;
 }
-
-/* Slider */
-
-.slidershow{
-    background-color: black; 
-    display: block; 
-    border-radius: 30px; 
-    width: 86%; 
-    height: 700px;
-    overflow: hidden;
-  }
-  .middle{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-  }
-  .navigation{
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-  }
-  .bar{
-    width: 50px;
-    height: 10px;
-    border: 2px solid #fff;
-    margin: 6px;
-    cursor: pointer;
-    transition: 0.4s;
-  }
-  .bar:hover{
-    background: #fff;
-  }
-  
-  input[name="r"]{
-      position: absolute;
-      visibility: hidden;
-  }
-  
-  .slides{
-    width: 500%;
-    height: 100%;
-    display: flex;
-  }
-  
-  .slide{
-    width: 20%;
-    transition: 0.6s;
-  }
-  .slide img{
-    width: 100%;
-    height: 100%;
-  }
-  
-  #r1:checked ~ .s1{
-    margin-left: 0;
-  }
-  #r2:checked ~ .s1{
-    margin-left: -20%;
-  }
-  #r3:checked ~ .s1{
-    margin-left: -40%;
-  }
-  #r4:checked ~ .s1{
-    margin-left: -60%;
-  }
-  #r5:checked ~ .s1{
-    margin-left: -80%;
-  }
 
 @media screen and (max-width:1150px) {
     .fresh-gelato {
