--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -4,21 +4,27 @@
     font-weight: bold;
 }
 
-.blank-space-footer{
-    width: 100%; 
-    height: 220px;
-}
 footer {
     background-image: url("../images/Footer-BG.png");
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
     text-decoration: none;
+}
+
+footer div:first-child {
+    padding-right: 10%;
+    padding-left: 10%;
 }
 
 .link {
     text-decoration: none;
     color: white;
+}
+
+
+@media screen and (max-width:1150px) {
+    footer {
+        background-image: url("../images/Footer-BG-2.png");
+    }
 }
