--- a/public/styles/gelato.css
+++ b/public/styles/gelato.css
@@ -74,7 +74,6 @@ body {
 .products-cards {
     display: flex;
     width: 100%;
-    margin-top: 50px;
     font-family: 'UVNSachVo';
     justify-content: center;
 }
@@ -201,7 +200,17 @@ body {
 }
 
 #where-to-taste {
-    font-size: 140px; font-family: 'Masterplan'; margin-left: 7vw; color: #ad2f16;
+    font-size: 140px; 
+    font-family: 'Masterplan'; 
+    margin-left: 7vw; 
+    color: #ad2f16;
+}
+
+#contact-for-details {
+    font-size: 40pt; 
+    text-align: center;
+    color: #ad2f16;
+    font-family: 'Masterplan'; 
 }
 
 .call-button {
@@ -235,10 +244,22 @@ body {
     color: #af2d2d;
 }
 
+#flavours {
+    font-size: 100pt; 
+    font-family: 'Masterplan'; 
+    color: #ffffff; 
+    text-align: center; 
+    text-shadow: 0 0 20px #b71020;
+}
+
 @media screen and (max-width:1150px) {
     .blank-space-resize {
         width: 100%; 
         height: 52px;
+    }
+
+    #flavours {
+        font-size: 80pt;
     }
 
     .why-choose {
@@ -304,5 +325,11 @@ body {
         width: 80%;
         height: 60px;
         margin-left: 10%;
+    }
+    .let-taste-text {
+        display: none;
+    }
+    #contact-for-details {
+        display: none;
     }
 }
