--- a/public/styles/burger-pizza.css
+++ b/public/styles/burger-pizza.css
@@ -416,6 +416,8 @@ body {
     .product-card-title {
         font-size: 24px;
         text-overflow: ellipsis;
+        width: 80%;
+        height: 80px;
     }
 
     .product-card-description {
@@ -425,12 +427,14 @@ body {
     #products-cards-hotdog .product-card-title {
         font-size: 24px;
         text-overflow: ellipsis;
+        width: 80%;
         height: 80px;
     }
 
     #products-cards-pizza .product-card-title {
         font-size: 24px;
         text-overflow: ellipsis;
+        width: 80%;
         height: 80px;
     }
 
